# Fiserv-assignment

./: .gitignore  README.md  pyproject.toml
data/: eval_ground_truth.json  eval_tickets.json
outputs/: results.json
prompts/: classify_ticket.md
src/ticket_classifier/: evaluate.py  llm.py  main.py  models.py  ticket_loader.py
